Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is ahead of 'origin/main' by 1 commit.
  (use "git push" to publish your local commits)

Changes to be committed:
	modified:   src/web/Index.html
	modified:   src/web/css/style.css

--- a/src/web/Index.html
+++ b/src/web/Index.html
@@ -7,18 +7,31 @@
     <title>MY || WEB</title>
 </head>
 <body>
-    <header>
-        <div class="logo">Logo</div>
-        <nav>
-            <ul>
-                <li><a href=""></a>Home</li>
-                <li><a href=""></a>About</li>
-                <li><a href=""></a>Blog</li>
-                <li><a href=""></a>Contact</li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-    </main>
+    <div class="items">
+        <div class="card">
+            <div class="content">
+                this is an imaged background
+            </div>
+            <div class="link">
+                <a href="">Click here for more</a>
+            </div>
+        </div>
+        <div class="card">
+            <div class="content">
+                this is an imaged background
+            </div>
+            <div class="link">
+                <a href="">Click here for more</a>
+            </div>
+        </div>
+        <div class="card">
+            <div class="content">
+                this is an imaged background
+            </div>
+            <div class="link">
+                <a href="">Click here for more</a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
