Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   README.md
	new file:   images/file.png
	new file:   images/me.jpg
	new file:   quiz.txt
	new file:   quizDone.txt
	new file:   src/Data/Array/TheMultiDimArray.java
	new file:   src/Data/Array/multiDimArray.java
	new file:   src/Data/Arrays.java
	new file:   src/Data/Readme.md
	new file:   src/File_handling/Fileconverter.java
	modified:   src/File_handling/ReadingFile.java
	new file:   src/File_handling/file.java
	modified:   src/Main.java
	new file:   src/Quiz/Quiz.java
	new file:   src/math/GuessingGame.java
	modified:   src/web/Index.html
	modified:   src/web/css/style.css

--- a/src/web/Index.html
+++ b/src/web/Index.html
@@ -3,35 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+
+    <!-- This is my css -->
     <link rel="stylesheet" href="/src/web/css/style.css">
-    <title>MY || WEB</title>
 </head>
 <body>
-    <div class="items">
-        <div class="card">
+    <!-- This is my header section -->
+    <header>
+        <div class="logo" >⁜</div>
+        <nav>
+            <ul>
+                <li> <a href="#home">  Home </a>   </li>
+                <li> <a href="#about">  About </a>   </li>
+                <li> <a href="#contact">  Contact </a>   </li>
+            </ul>
+        </nav>
+    </header>
+    <!-- end of header -->
+
+    <!-- the main content -->
+    <main>
+        <section class="home" id="home">
             <div class="content">
-                this is an imaged background
+                <h1>This is my Trial Work</h1>
+                <h3>Welcome</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda, excepturi?</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto, ea.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto, ea.</p>
             </div>
-            <div class="link">
-                <a href="">Click here for more</a>
+            <div class="image">
+                <img src="/images/file.png" alt="me">
             </div>
-        </div>
-        <div class="card">
-            <div class="content">
-                this is an imaged background
-            </div>
-            <div class="link">
-                <a href="">Click here for more</a>
-            </div>
-        </div>
-        <div class="card">
-            <div class="content">
-                this is an imaged background
-            </div>
-            <div class="link">
-                <a href="">Click here for more</a>
-            </div>
-        </div>
-    </div>
+
+        </section>
+        <!-- end of my home section-->
+        <section class="about" id="about"></section>
+        <section class="contact" id="contact"></section>
+    </main>
 </body>
 </html>
